adding background demo

--- a/background-JongWon/index.html
+++ b/background-JongWon/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Background Hijinks</title>
+    <title>JongWonHwang</title>
 
     <!-- Ignore this file students -->
     <link href="starter.css" rel="stylesheet" type="text/css" />
