--- a/percentage-grid 2/index.html
+++ b/percentage-grid 2/index.html
@@ -31,7 +31,7 @@
         background-image: url('img/How.gif');
       }
         .image5 {
-            background-image: url('img/calendar.gif')
+            background-image: url('img/Calendar.gif')
         }
         .image6 {
             background-image: url('img/The.gif');
